// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<NewsletterSignup
  apikey=""
  buttonText="Sign Up"
  emailPlaceholder="Email address"
  imageSrc="/themes/wipro/subscribe-bg.jpg"
  text="Don’t miss out on the latest Topcoder IOS challenges and information!"
  theme={
    Object {
      "container": "src-shared-components-tc-communities-NewsletterSignup-___style__container___3FbuD",
      "content": "src-shared-components-tc-communities-NewsletterSignup-___style__content___3QiYz",
      "form": "src-shared-components-tc-communities-NewsletterSignup-___style__form___3yW86",
      "formButton": "src-shared-components-tc-communities-NewsletterSignup-___style__formButton___Jve55",
      "formEmail": "src-shared-components-tc-communities-NewsletterSignup-___style__formEmail___3N_Uv",
      "text": "src-shared-components-tc-communities-NewsletterSignup-___style__text___1bA_y",
      "title": "src-shared-components-tc-communities-NewsletterSignup-___style__title___ErlHl",
    }
  }
  title="Sign up for our newsletter"
  url=""
/>
`;

exports[`Snapshot match 2`] = `
<NewsletterSignup
  apikey=""
  buttonText="Sign Up"
  emailPlaceholder="Email address"
  imageSrc="/themes/wipro/subscribe-bg.jpg"
  text="Don’t miss out on the latest Topcoder IOS challenges and information!"
  theme={
    Object {
      "container": "container src-shared-components-tc-communities-NewsletterSignup-___style__container___3FbuD",
      "content": "content src-shared-components-tc-communities-NewsletterSignup-___style__content___3QiYz",
      "form": "form src-shared-components-tc-communities-NewsletterSignup-___style__form___3yW86",
      "formButton": "formButton src-shared-components-tc-communities-NewsletterSignup-___style__formButton___Jve55",
      "formEmail": "formEmail src-shared-components-tc-communities-NewsletterSignup-___style__formEmail___3N_Uv",
      "text": "text src-shared-components-tc-communities-NewsletterSignup-___style__text___1bA_y",
      "title": "title src-shared-components-tc-communities-NewsletterSignup-___style__title___ErlHl",
    }
  }
  title="Sign up for our newsletter"
  url=""
/>
`;
